...
    
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.title = NSLocalizedString("titleHeroesView", comment: "Title Navigation Bar")
        self.navigationController?.navigationBar.accessibilityIdentifier = "InitAppListHeroesNavBar"
        self.setupCollectionView()
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.heroes.fetchHeroes()
...
    
    // MARK: - Funcs
    fileprivate func setupCollectionView() {
        self.collectionView.register(UINib(nibName: "HeroViewCell", bundle: nil), forCellWithReuseIdentifier: reuseIdentifier)
        self.collectionView.delegate = self
        self.collectionView.dataSource = self
        self.collectionView.accessibilityIdentifier = "InitAppCollectionView"
    }
    
    fileprivate func reloadDataCollectionView() {
        self.activityIndicator.startAnimating()
        NetworkingProvider.shared.dispatchGroup.notify(queue: .main) {
            self.collectionView.reloadData()
...
