...
                                <constraints>
                                    <constraint firstAttribute="height" constant="400" id="4Q0-yB-irJ"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lim-ws-Zfg" userLabel="ButtonClose">
                                <rect key="frame" x="671" y="8" width="25" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="ButtonCloseHeroDetailView"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="25" id="1fK-Ln-mrS"/>
                                    <constraint firstAttribute="height" constant="25" id="aHZ-cN-K8R"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
